// This file is part of arduino-cli.
//
// Copyright 2020 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to
// modify or otherwise use the software for commercial activities involving the
// Arduino software without disclosing the source code of your own applications.
// To purchase a commercial license, send an email to license@arduino.cc.

syntax = "proto3";

package cc.arduino.cli.commands;

option go_package = "github.com/arduino/arduino-cli/rpc/commands";

import "commands/common.proto";

message CompileReq {
  Instance instance = 1;
  string fqbn = 2 [deprecated=true]; // Fully Qualified Board Name, e.g.: arduino:avr:uno. DEPRECATED: use "board" field instead.
  string sketchPath = 3;
  bool showProperties = 4;  // Show all build preferences used instead of compiling.
  bool preprocess = 5;      // Print preprocessed code to stdout.
  string buildCachePath = 6;    // Builds of 'core.a' are saved into this path to be cached and reused.
  string buildPath = 7;         // Path where to save compiled files.
  repeated string buildProperties = 8; // List of custom build properties separated by commas. Or can be used multiple times for multiple properties.
  string warnings = 9;   // Used to tell gcc which warning level to use.
  bool verbose = 10;     // Turns on verbose mode.
  bool quiet = 11;             // Suppresses almost every output.
  string vidPid = 12;   // VID/PID specific build properties.
  string exportFile = 13;   // The compiled binary is written to this file
  int32 jobs = 14;   // The max number of concurrent compiler instances to run (as make -jx)
  repeated string libraries = 15; // List of custom libraries paths separated by commas. Or can be used multiple times for multiple libraries paths.
  bool optimizeForDebug = 16; // Optimize compile output for debug, not for release
  bool dryRun = 17; // When set to true the compiled binary will not be copied to the export directory
  string board = 18; // Board FQBN or Board alias
}

message CompileResp {
  bytes out_stream = 1;
  bytes err_stream = 2;
}
